--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to gis3dts
+description: This page is designed to highlight my skills and for your edu-tainment
